--- a/app/views/goals/_leaders.html.erb
+++ b/app/views/goals/_leaders.html.erb
@@ -1,6 +1,8 @@
 <div class="panel panel-default">
   <!-- Default panel contents -->
-  <div class="panel-heading"><h4>Leader Board</h4></div>
+  <div class="panel-heading leader">
+    <h3 class="panel-title">Leader Board</h3>
+  </div>
 
   <!-- Table -->
   <table class="table">
