--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -18,7 +18,7 @@
   </div>
 <!-- Right Column -->
   <div class="col-md-6">
-    <div>
+    <div class="comment-goal">
       <%= render 'comments/form' %>
     </div>
     <br />
@@ -36,6 +36,3 @@
 
   </div>
 </div> <!-- row -->
-
-
-<%= link_to 'Back', goals_path, class: "btn btn-primary btn-sm" %>
