--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,12 +1,9 @@
-<div class="panel panel-default">
-  <div class="panel-body">
-    <h1>User Profiles</h1>
-  </div>
-</div>
+
+    <h1 class="title"><%= @user.username %>'s Profile</h1>
 
 <!-- User Profile Panel -->
 
-<div class="panel panel-default">
+<div class="panel panel-default p-panel">
   <div class="panel-body">
     <div class="row">
       <!-- Left Column -->
@@ -17,7 +14,7 @@
       </div>
       <!-- Center Column -->
       <div class="col-md-3">
-        <div class="panel panel-default">
+        <div class="panel panel-default profile">
           <div class="panel-heading">
             <h3 class="panel-title">Details</h3>
           </div>
@@ -33,7 +30,7 @@
       </div>
       <!-- Right Column -->
       <div class="col-md-7">
-        <div class="panel panel-default">
+        <div class="panel panel-default profile">
           <div class="panel-heading">
             <h3 class="panel-title">Bio</h3>
           </div>
