--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -21,6 +21,6 @@
   </div><br />
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-default btn-sm btn-block"%>
   </div>
 <% end %>
