--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -67,11 +67,11 @@
     <div class="field">
       <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
       <%= f.password_field :current_password, autocomplete: "off" %>
-    </div>
+    </div><br />
 
     <div class="actions">
       <%= f.submit "Update", class: "btn btn-primary btn-sm" %>
-    </div>
+    </div><br />
   <% end %>  <!-- Form end -->
 
   </div>
