--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,14 +7,25 @@
   </div>
 </div>
 
-<div class="row ">
-  <div class="col-sm-4">
-    <h2>hello</h2>
+<div class="row">
+  <div class="col-sm-4 motivation">
+    <h2>
+       “Set your goals high, and don’t stop till you get there.”
+    </h2>
+    <h3>– Bo Jackson</h3>
   </div>
-  <div class="col-sm-4">
-    <h2>hello</h2>
+  <div class="col-sm-4 motivation">
+    <h2>
+      “Persistence can change failure into extraordinary achievement.”
+    </h2>
+    <h3>
+      – Marv Levy
+    </h3>
   </div>
-  <div class="col-sm-4">
-    <h2>hello</h2>
+  <div class="col-sm-4 motivation">
+    <h2>
+      “If you fail to prepare, you’re prepared to fail.”
+    </h2>
+    <h3>– Mark Spitz</h3>
   </div>
 </div>
