styled modals, changed panel-footer to gray

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,8 +68,7 @@ box-shadow: 3px 3px 10px #888;
 }
 
 .panel > .panel-footer {
-    background-color: #428bca;
-    color: white;
+    background-color: #f7f7f7;
 }
 
 .leader {
