--- a/app/views/devise/registrations/_modal.html.erb
+++ b/app/views/devise/registrations/_modal.html.erb
@@ -2,45 +2,53 @@
 <%= form_for(:user, url: registration_path(:user)) do |f| %>
   <!--<#%= devise_error_messages! %>-->
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true %>
+<div class="row">
+  <div class="col-sm-6">
+    <form>
+      <div class="form-group">
+        <%= f.label :first_name %><br />
+        <%= f.text_field :first_name, autofocus: true, class:"form-control" %>
+      </div>
+    
+      <div class="form-group">
+        <%= f.label :last_name %><br />
+        <%= f.text_field :last_name, class:"form-control" %>
+      </div>
+    
+      <div class="form-group">
+        <%= f.label :username %><br />
+        <%= f.text_field :username, class:"form-control" %>
+      </div>
+    
+      <div class="form-group">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, class:"form-control" %>
+      </div><br />
+    </form>
   </div>
 
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </div><br />
-
-  <div class="field form-group">
-    <%= f.label :avatar %>
-    <%= f.file_field :avatar %>
-  </div><br />
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+  <div class="col-sm-6">
+    <div class="field form-group">
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar %>
+    </div><br />
+  <form>
+    <div class="form-group">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "off", class:"form-control" %>
+    </div>
+  
+    <div class="form-group">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control" %>
+    </div>
+  </form>
+    <div class="actions">
+      <%= f.submit "Sign up", class:'btn btn-primary' %>
+    </div>
+  <% end %>
+</div>
+</div>
