--- a/app/views/devise/registrations/_modal2.html.erb
+++ b/app/views/devise/registrations/_modal2.html.erb
@@ -1,23 +1,30 @@
 
 <%= form_for(:user, url: user_session_path) do |f| %>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <% if devise_mapping.rememberable? -%>
-    <div class="field">
-      <%= f.check_box :remember_me %>
-      <%= f.label :remember_me %>
+<form>
+<div class="row">
+    <div class="col-sm-8">
+  
+    <div class="form-group">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, class:"form-control" %>
     </div>
-  <% end -%>
-
-  <div class="actions">
-    <%= f.submit "Log in" %>
+  
+    <div class="form-group">
+      <%= f.label :password %><br />
+      <%= f.password_field :password, autocomplete: "off", class:"form-control" %>
+    </div>
+  </form>
+  
+    <% if devise_mapping.rememberable? -%>
+      <div class="field">
+        <%= f.check_box :remember_me %>
+        <%= f.label :remember_me %>
+      </div>
+    <% end -%>
+  
+    <div class="actions">
+      <%= f.submit "Log in", class:"btn btn-primary" %>
+    </div>
   </div>
+</div>
 <% end %>
