--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -52,6 +52,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Login</h4>
       </div>
+      <%= image_tag("bridge.jpg", class:"img-responsive") %>
       <div class="modal-body">
         <%= render "devise/registrations/modal2" %>
       </div>
@@ -71,6 +72,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Sign Up</h4>
       </div>
+      <%= image_tag("bridge.jpg", class:"img-responsive") %>
       <div class="modal-body">
         <%= render "devise/registrations/modal" %>
       </div>
