--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,9 @@
   <title>Accountable</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= favicon_link_tag 'favicon-users.ico' %>
-  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:700' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
+  <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto+Slab:700' %>
+  <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Ubuntu' %>
+  <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Droid+Serif:400,700' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
