Make welcome quotes responsive

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,23 +9,23 @@
 
 <div class="row">
   <div class="col-sm-4 motivation">
-    <h2>
+    <h2 class="quote">
        “Set your goals high, and don’t stop till you get there.”
     </h2>
-    <h3>– Bo Jackson</h3>
+    <h3 class="auth">– Bo Jackson</h3>
   </div>
   <div class="col-sm-4 motivation">
-    <h2>
+    <h2 class="quote">
       “Persistence can change failure into extraordinary achievement.”
     </h2>
-    <h3>
+    <h3 class="auth">
       – Marv Levy
     </h3>
   </div>
   <div class="col-sm-4 motivation">
-    <h2>
+    <h2 class="quote">
       “If you fail to prepare, you’re prepared to fail.”
     </h2>
-    <h3>– Mark Spitz</h3>
+    <h3 class="auth">– Mark Spitz</h3>
   </div>
 </div>
