--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -95,7 +95,7 @@ box-shadow: 3px 3px 10px #888;
 }
 
 .motivation {
-  margin-top: -100px;
+  margin-top: -2em;
 }
 
 .navimg {
@@ -117,4 +117,14 @@ box-shadow: 3px 3px 10px #888;
 .panel-title {
   font-family: 'Roboto Slab', serif;
   font-size: 1.4em;
+}
+
+.quote {
+  font-size: 2.25em;
+  margin-top: -50px;
+}
+
+.auth {
+  font-size: 1.5em;
+  padding-bottom: 2em;
 }
